--- a/Config.json
+++ b/Config.json
@@ -1,6 +1,6 @@
 {
- "version": 22,
- "message": "Trueâœ… Aisâœ… VipðŸ’¥",
+ "version": 23,
+ "message": "True✅ Ais✅ Vip",
  "dtac": "",
  "true": "",
  "ais": "",
@@ -17,4 +17,5 @@
   }
  ]
 }
+
 
